# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.490 2005/12/23 06:38:18 rocket Exp $

  23 Dec 2005; Eric Edgar <rocket@gentoo.org> arch/sh.py,
  modules/generic_stage_target.py, modules/stage4_target.py:
  remove stray ' from arch/sh.py

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/stage1/stage1-controller.sh:
  This finally fixes the issues with gcc-config/binutils-config in stage1.
  This is catalyst 2.0_rc12.

  21 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/snapshot_target.py:
  Fix incorrect warning message.  portdir_overlay -> portage_overlay

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh,
  targets/stage1/stage1-preclean-chroot.sh:
  Revert gcc-config/binutils-config to _rc11 locations. This should fix
  running gcc-config and binutils-config, though it probably breaks running on
  non-Gentoo platforms.

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/stage1_target.py:
  Make stage1 clean up python 2.3 and 2.4, also.

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> README,
  targets/support/livecdfs-update.sh:
  Updated requirements and added creation of metadata.tar.bz2 for the installer.

  21 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Change digests file format to HASH_NAME HASH FILE_NAME

  21 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh:
  Moved gcc-config/binutils-config to before the chroot.

  21 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py:
  Remove requirement on md5sum,sha1sum,crc32 .. only need to have shash
  installed. Supports all of shashs algorithms as of 12_21_2005

  20 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Catalyst should die if source_subpath is not a string

  20 Dec 2005; Eric Edgar <rocket@gentoo.org>