@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.490 2005/12/23 06:38:18 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.491 2005/12/28 11:56:17 rocket Exp $
+
+  28 Dec 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py, modules/stage4_target.py:
+  Fix for bug 116305;removed unnecessary pkgcache_path processing from the
+  stage4 target
 
   23 Dec 2005; Eric Edgar <rocket@gentoo.org> arch/sh.py,
   modules/generic_stage_target.py, modules/stage4_target.py:
